<resources>
    <string name="app_name">Womensafety</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="todo">TODO</string>
    <string name="safetyguard">SafetyGuard</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="safety_tips">Safety Tips</string>
    <string name="sos_contacts">SOS Contacts</string>
    <string name="home_todo">TODO</string>
    <string name="home_logo" />
    <string name="women_safety">Women Safety</string>
    <string name="activate_app">Activate App</string>
    <string name="family_member">Family Member</string>
    <string name="register">Register</string>
    <string name="login1">Login</string>
    <string name="feedback">Feedback</string>
    <string name="police_station">Police Station</string>
    <string name="report">Report</string>
    <string name="safety_is_our_priority">Safety is our Priority</string>
    <string name="women_safety1">Women Safety</string>
    <string name="todo_logo">TODO</string>
    <string name="add_family_member">Add Family Member</string>
    <string name="family_member_1_phone">Family Member 1 Phone</string>
    <string name="family_member_1_name">Family Member 1 Name</string>
    <string name="provide_feedback">Provide Feedback</string>
    <string name="your_feedback_message">Your feedback message</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="police_station1">Police Station</string>
    <string name="address_address">Address: [Address]</string>
    <string name="contact_contact_number">Contact: [Contact Number]</string>
    <string name="description_description">Description: [Description]</string>
    <string name="app_on">App On</string>
    <string name="app_off">App Off</string>
    <string name="report_area">Report Area</string>
    <string name="area_name">Area Name</string>
    <string name="description">Description</string>
    <string name="submit_report">Submit Report</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="ragister">Ragister</string>
    <string name="login2">Login ?</string>
    <string name="username">username</string>
    <string name="default_notification_channel_id">notification1</string>
    <string name="select_police_station">Select Police Station</string>
    <string name="address">Address:</string>
    <string name="phone_number_police">Phone Number:</string>
    <string name="police_station_logo">police station logo</string>
    <string name="header_login">Login</string>
    <string name="profile_icon_description">profile_picture_value2</string>
    <string name="user_s_name">User\'s Name</string>
    <string name="emailniew">Emailview</string>
    <string name="Your_email">Email_view</string>
    <string name="password11">Password</string>
    <string name="get_location">Get Location</string>
    <string name="logout">Logout</string>
    <string name="signup1">signup</string>
    <string name="email99">Email</string>
    <string name="phone99">Phone</string>
    <string name="name99">Name</string>
    <string name="remove99">Remove</string>
    <string name="add_family_member99">Add Family Member</string>
    <string name="save_family_members99">Save Family Members</string>
    <string name="add_family_members99">Add Family Members</string>
    <string name="family_member_1_email">family_member_1_Email</string>
    <string name="family_member_email">Family Member Email</string>
    <string name="family_member_name">Family Member Name</string>
    <string name="family_member_phone_number">Family Member Phone Number</string>
    <string name="send_alert">Send Alert</string>
</resources>