<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient1">


    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="16dp"
        android:textAllCaps="true"
        android:text="@string/header_login"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="text"
        android:textColor="@color/white"
        android:background="@drawable/border"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="25dp"
        android:paddingStart="10dp"
        android:hint="@string/username_or_email"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/border"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="1dp"
        android:autofillHints="numericPassword"
        android:drawableStart="@drawable/baseline_info_24"
        android:drawablePadding="20dp"
        android:paddingStart="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_below="@+id/Password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="1dp"
        android:text="@string/login" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="78dp"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_marginStart="300dp"
        android:layout_marginTop="5dp"
        android:text="@string/signup1"
        android:textColor="@color/white"
        android:textSize="16sp"/>



</RelativeLayout>
