<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="133dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/police_station_logo"
        android:src="@drawable/img" />

    <TextView
        android:id="@+id/textViewSelectStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/select_police_station"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerPoliceStations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/address"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Police HQ Mavdi, Mota mava, Rajkot, Gujarat-361306"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_police"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="99299 55855"
        android:textSize="16sp" />

</LinearLayout>
