<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/gradientbcg">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_s_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Your_email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>


    <!--    <TextView-->
<!--        android:id="@+id/teViewpass1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/password11"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        android:padding="16dp"/>-->

    <!-- Add more TextViews for other user information -->
</LinearLayout>