<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbcg">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/women_safety"
        android:src="@drawable/logo" />

    <!-- App On Button -->
    <Button
        android:id="@+id/app_on_button"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@android:color/holo_green_dark"
        android:padding="10dp"
        android:text="@string/app_on"
        android:textColor="#040404"
        android:textSize="18sp" />

    <!-- App Off Button -->
    <Button
        android:id="@+id/app_off_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_on_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/purple_200"
        android:text="@string/app_off"
        android:textColor="#000000"
        android:textSize="18sp" />

</RelativeLayout>
