<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradientbcg">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provide_feedback"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- RatingBar for Rating -->
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stepSize="1"
        android:numStars="5"
        android:rating="3.0" />

    <!-- Feedback Message -->
    <EditText
        android:id="@+id/feedbackMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_feedback_message"
        android:layout_marginTop="16dp"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:gravity="top"
        android:layout_gravity="center"
        android:autofillHints="text" />

    <!-- Submit Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_feedback"
        android:id="@+id/submitFeedbackButton"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />
</LinearLayout>
